--- a/Clock/Alarm.ini
+++ b/Clock/Alarm.ini
@@ -1,2 +1,3 @@
-0001.01.01	16:51:32	Ср,Пт,Сб,Вс,	  VLAXXE, Polaris - last life.wav.mp3
-0001.01.01	16:51:32	Ср,Пт,Сб,Вс,	  VLAXXE, Polaris - last life.wav.mp3
+2026.01.19	18:08:30		   Rammstein_-_Mein_Herz_brennt_57658979.mp3
+Выбранные дни	18:08:40	Вт,Чт,	   VLAXXE, Polaris - last life.wav.mp3
+Выбранные дни	18:08:50	Пн,Пт,	   VLAXXE, Polaris - last life.wav.mp3
