--- a/Clock/Alarm.ini
+++ b/Clock/Alarm.ini
@@ -1,3 +1,4 @@
-2026.01.20	18:04:20		      Filename:
-Каждый день	18:04:22	Пн,Вт,Ср,Чт,Пт,Сб,Вс,	      Filename:
-Каждый день	18:04:25	Пн,Вт,Ср,Чт,Пт,Сб,Вс,	      Filename:
+2026.01.21	01:04:00		     Rammstein_-_Mein_Herz_brennt_57658979.mp3
+Каждый день	08:00:00	Чт,Сб,	                Filename:
+2026.01.23	18:04:25		                Filename:
+Каждый день	01:07:07	Пн,Чт,Сб,Вс,	    Filename:
