--- a/Clock/Alarm.ini
+++ b/Clock/Alarm.ini
@@ -1,4 +1,2 @@
-2026.01.21	01:04:00		     Rammstein_-_Mein_Herz_brennt_57658979.mp3
-Каждый день	08:00:00	Чт,Сб,	                Filename:
-2026.01.23	18:04:25		                Filename:
-Каждый день	01:07:07	Пн,Чт,Сб,Вс,	    Filename:
+2026.01.21	20:22:00		            Rammstein_-_Mein_Herz_brennt_57658979.mp3
+Каждый день	20:15:00	Пн,Вт,Ср,Чт,Пт,Сб,Вс,	 VLAXXE, Polaris - last life.wav.mp3
