--- a/Clock/Alarm.ini
+++ b/Clock/Alarm.ini
@@ -1,2 +1,2 @@
-2026.01.21	20:30:00		                      Rammstein_-_Mein_Herz_brennt_57658979.mp3
-Каждый день	20:47:00	Вс,	           VLAXXE, Polaris - last life.wav.mp3
+2026.01.21	20:30:00		                         Rammstein_-_Mein_Herz_brennt_57658979.mp3
+Каждый день	20:47:00	Пн,Вт,Ср,Чт,Пт,Сб,Вс,	              VLAXXE, Polaris - last life.wav.mp3
