--- a/Clock/Alarm.ini
+++ b/Clock/Alarm.ini
@@ -1,3 +1,3 @@
-2026.01.23	16:30:00		                                       Rammstein_-_Mein_Herz_brennt_57658979.mp3
-Каждый день	18:20:00	Пт,Сб,Вс,	                            VLAXXE, Polaris - last life.wav.mp3
-2026.01.24	17:45:00		         Filename:
+2026.01.06	16:30:00		                                                 Rammstein_-_Mein_Herz_brennt_57658979.mp3
+Каждый день	21:29:00	Чт,Пт,Вс,	                                      VLAXXE, Polaris - last life.wav.mp3
+2026.01.23	17:45:00		                   Filename:
