Font in progress

--- a/FontLibrary/FontLibrary.csproj
+++ b/FontLibrary/FontLibrary.csproj
@@ -46,39 +46,39 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Crashed Scoreboard.ttf" />
-    <Resource Include="digital-7 %28italic%29.ttf" />
-    <Resource Include="digital-7 %28mono italic%29.ttf" />
-    <Resource Include="digital-7 %28mono%29.ttf" />
-    <Resource Include="digital-7.ttf" />
-    <Resource Include="DIGITALDREAM.ttf" />
-    <Resource Include="DIGITALDREAMFAT.ttf" />
-    <Resource Include="DIGITALDREAMFATNARROW.ttf" />
-    <Resource Include="DIGITALDREAMFATSKEW.ttf" />
-    <Resource Include="DIGITALDREAMFATSKEWNARROW.ttf" />
-    <Resource Include="DIGITALDREAMNARROW.ttf" />
-    <Resource Include="DIGITALDREAMSKEW.ttf" />
-    <Resource Include="DIGITALDREAMSKEWNARROW.ttf" />
-    <Resource Include="digital_counter_7.ttf" />
-    <Resource Include="digital_counter_7_italic.ttf" />
-    <Resource Include="DS-DIGI.TTF" />
-    <Resource Include="DS-DIGIB.TTF" />
-    <Resource Include="DS-DIGII.TTF" />
-    <Resource Include="DS-DIGIT.TTF" />
-    <Resource Include="E1234-Italic.ttf" />
-    <Resource Include="E1234.ttf" />
-    <Resource Include="LCD14.otf" />
-    <Resource Include="LCD14Condensed.otf" />
-    <Resource Include="LCD14Italic.otf" />
-    <Resource Include="LCD14ItalicCondensed.otf" />
-    <Resource Include="MOSCOW2024.otf" />
-    <Resource Include="SFDigitalReadout-Heavy.ttf" />
-    <Resource Include="SFDigitalReadout-HeavyObliq.ttf" />
-    <Resource Include="SFDigitalReadout-Light.ttf" />
-    <Resource Include="SFDigitalReadout-LightObliq.ttf" />
-    <Resource Include="SFDigitalReadout-Medium.ttf" />
-    <Resource Include="SFDigitalReadout-MediumObli.ttf" />
-    <Resource Include="Terminat.ttf" />
+    <EmbeddedResource Include="Crashed Scoreboard.ttf" />
+    <EmbeddedResource Include="digital-7 %28italic%29.ttf" />
+    <EmbeddedResource Include="digital-7 %28mono italic%29.ttf" />
+    <EmbeddedResource Include="digital-7 %28mono%29.ttf" />
+    <EmbeddedResource Include="digital-7.ttf" />
+    <EmbeddedResource Include="DIGITALDREAM.ttf" />
+    <EmbeddedResource Include="DIGITALDREAMFAT.ttf" />
+    <EmbeddedResource Include="DIGITALDREAMFATNARROW.ttf" />
+    <EmbeddedResource Include="DIGITALDREAMFATSKEW.ttf" />
+    <EmbeddedResource Include="DIGITALDREAMFATSKEWNARROW.ttf" />
+    <EmbeddedResource Include="DIGITALDREAMNARROW.ttf" />
+    <EmbeddedResource Include="DIGITALDREAMSKEW.ttf" />
+    <EmbeddedResource Include="DIGITALDREAMSKEWNARROW.ttf" />
+    <EmbeddedResource Include="digital_counter_7.ttf" />
+    <EmbeddedResource Include="digital_counter_7_italic.ttf" />
+    <EmbeddedResource Include="DS-DIGI.TTF" />
+    <EmbeddedResource Include="DS-DIGIB.TTF" />
+    <EmbeddedResource Include="DS-DIGII.TTF" />
+    <EmbeddedResource Include="DS-DIGIT.TTF" />
+    <EmbeddedResource Include="E1234-Italic.ttf" />
+    <EmbeddedResource Include="E1234.ttf" />
+    <EmbeddedResource Include="LCD14.otf" />
+    <EmbeddedResource Include="LCD14Condensed.otf" />
+    <EmbeddedResource Include="LCD14Italic.otf" />
+    <EmbeddedResource Include="LCD14ItalicCondensed.otf" />
+    <EmbeddedResource Include="MOSCOW2024.otf" />
+    <EmbeddedResource Include="SFDigitalReadout-Heavy.ttf" />
+    <EmbeddedResource Include="SFDigitalReadout-HeavyObliq.ttf" />
+    <EmbeddedResource Include="SFDigitalReadout-Light.ttf" />
+    <EmbeddedResource Include="SFDigitalReadout-LightObliq.ttf" />
+    <EmbeddedResource Include="SFDigitalReadout-Medium.ttf" />
+    <EmbeddedResource Include="SFDigitalReadout-MediumObli.ttf" />
+    <EmbeddedResource Include="Terminat.ttf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
