font in progress

--- a/FontLibrary/FontLibrary.csproj
+++ b/FontLibrary/FontLibrary.csproj
@@ -45,40 +45,41 @@
     <Compile Include="FontLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <EmbeddedResource Include="Crashed Scoreboard.ttf" />
-    <EmbeddedResource Include="digital-7 %28italic%29.ttf" />
-    <EmbeddedResource Include="digital-7 %28mono italic%29.ttf" />
-    <EmbeddedResource Include="digital-7 %28mono%29.ttf" />
-    <EmbeddedResource Include="digital-7.ttf" />
-    <EmbeddedResource Include="DIGITALDREAM.ttf" />
-    <EmbeddedResource Include="DIGITALDREAMFAT.ttf" />
-    <EmbeddedResource Include="DIGITALDREAMFATNARROW.ttf" />
-    <EmbeddedResource Include="DIGITALDREAMFATSKEW.ttf" />
-    <EmbeddedResource Include="DIGITALDREAMFATSKEWNARROW.ttf" />
-    <EmbeddedResource Include="DIGITALDREAMNARROW.ttf" />
-    <EmbeddedResource Include="DIGITALDREAMSKEW.ttf" />
-    <EmbeddedResource Include="DIGITALDREAMSKEWNARROW.ttf" />
-    <EmbeddedResource Include="digital_counter_7.ttf" />
-    <EmbeddedResource Include="digital_counter_7_italic.ttf" />
-    <EmbeddedResource Include="DS-DIGI.TTF" />
-    <EmbeddedResource Include="DS-DIGIB.TTF" />
-    <EmbeddedResource Include="DS-DIGII.TTF" />
-    <EmbeddedResource Include="DS-DIGIT.TTF" />
-    <EmbeddedResource Include="E1234-Italic.ttf" />
-    <EmbeddedResource Include="E1234.ttf" />
-    <EmbeddedResource Include="LCD14.otf" />
-    <EmbeddedResource Include="LCD14Condensed.otf" />
-    <EmbeddedResource Include="LCD14Italic.otf" />
-    <EmbeddedResource Include="LCD14ItalicCondensed.otf" />
-    <EmbeddedResource Include="MOSCOW2024.otf" />
-    <EmbeddedResource Include="SFDigitalReadout-Heavy.ttf" />
-    <EmbeddedResource Include="SFDigitalReadout-HeavyObliq.ttf" />
-    <EmbeddedResource Include="SFDigitalReadout-Light.ttf" />
-    <EmbeddedResource Include="SFDigitalReadout-LightObliq.ttf" />
-    <EmbeddedResource Include="SFDigitalReadout-Medium.ttf" />
-    <EmbeddedResource Include="SFDigitalReadout-MediumObli.ttf" />
-    <EmbeddedResource Include="Terminat.ttf" />
+    <None Include="Font\Crashed Scoreboard.ttf" />
+    <None Include="Font\digital-7 %28italic%29.ttf" />
+    <None Include="Font\digital-7 %28mono italic%29.ttf" />
+    <None Include="Font\digital-7 %28mono%29.ttf" />
+    <None Include="Font\digital-7.ttf" />
+    <None Include="Font\DIGITALDREAM.ttf" />
+    <None Include="Font\DIGITALDREAMFAT.ttf" />
+    <None Include="Font\DIGITALDREAMFATNARROW.ttf" />
+    <None Include="Font\DIGITALDREAMFATSKEW.ttf" />
+    <None Include="Font\DIGITALDREAMFATSKEWNARROW.ttf" />
+    <None Include="Font\DIGITALDREAMNARROW.ttf" />
+    <None Include="Font\DIGITALDREAMSKEW.ttf" />
+    <None Include="Font\DIGITALDREAMSKEWNARROW.ttf" />
+    <None Include="Font\digital_counter_7.ttf" />
+    <None Include="Font\digital_counter_7_italic.ttf" />
+    <None Include="Font\DS-DIGI.TTF" />
+    <None Include="Font\DS-DIGIB.TTF" />
+    <None Include="Font\DS-DIGII.TTF" />
+    <None Include="Font\DS-DIGIT.TTF" />
+    <None Include="Font\E1234-Italic.ttf" />
+    <None Include="Font\E1234.ttf" />
+    <None Include="Font\LCD14.otf" />
+    <None Include="Font\LCD14Condensed.otf" />
+    <None Include="Font\LCD14Italic.otf" />
+    <None Include="Font\LCD14ItalicCondensed.otf" />
+    <None Include="Font\MOSCOW2024.otf" />
+    <None Include="Font\SFDigitalReadout-Heavy.ttf" />
+    <None Include="Font\SFDigitalReadout-HeavyObliq.ttf" />
+    <None Include="Font\SFDigitalReadout-Light.ttf" />
+    <None Include="Font\SFDigitalReadout-LightObliq.ttf" />
+    <None Include="Font\SFDigitalReadout-Medium.ttf" />
+    <None Include="Font\SFDigitalReadout-MediumObli.ttf" />
+    <None Include="Font\Terminat.ttf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
