--- a/Autorunner/Autorunner.csproj
+++ b/Autorunner/Autorunner.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{510D9A44-5EDE-4576-AC79-805F9EF8C00E}</ProjectGuid>
+    <ProjectGuid>{DD4C8B72-B947-4EB3-8CD4-7BF9051B6FDE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Clock</RootNamespace>
-    <AssemblyName>Clock</AssemblyName>
+    <RootNamespace>Autorunner</RootNamespace>
+    <AssemblyName>Autorunner</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,13 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup />
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,48 +44,18 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alarm.cs" />
-    <Compile Include="AlarmDialog.cs">
+    <Compile Include="Install.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AlarmDialog.Designer.cs">
-      <DependentUpon>AlarmDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="AlarmsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AlarmsForm.Designer.cs">
-      <DependentUpon>AlarmsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FontDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FontDialog.Designer.cs">
-      <DependentUpon>FontDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="Install.Designer.cs">
+      <DependentUpon>Install.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Week.cs" />
-    <EmbeddedResource Include="AlarmDialog.resx">
-      <DependentUpon>AlarmDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AlarmsForm.resx">
-      <DependentUpon>AlarmsForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FontDialog.resx">
-      <DependentUpon>FontDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="Install.resx">
+      <DependentUpon>Install.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,7 +65,6 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -114,31 +78,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="AxWMPLib">
-      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>aximp</WrapperTool>
-      <Isolated>False</Isolated>
-    </COMReference>
-    <COMReference Include="WMPLib">
-      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Autorunner\Autorunner.csproj">
-      <Project>{dd4c8b72-b947-4eb3-8cd4-7bf9051b6fde}</Project>
-      <Name>Autorunner</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
